--- a/ios/FilterReminderApp/Info.plist
+++ b/ios/FilterReminderApp/Info.plist
@@ -71,6 +71,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>PTSans-Bold.ttf</string>
+		<string>PTSans-BoldItalic.ttf</string>
+		<string>PTSans-Italic.ttf</string>
+		<string>PTSans-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
